# utils_crate/Cargo.toml
[package]
name = "utils_crate"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true } # This will resolve to `false` due to workspace root setting
description = "Общие утилиты, типы ошибок и разделяемые структуры данных для AI Agent (Математика/Rust)."

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
either = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
toml_edit = { workspace = true, optional = true } 
path-absolutize = { workspace = true, optional = true }

llguidance = { workspace = true, optional = true }
dirs-next = { workspace = true, optional = true } 
tracing-subscriber = { workspace = true, optional = true } 
config = { workspace = true, optional = true } 
toml = { workspace = true, optional = true } 
num_cpus = { workspace = true, optional = true } 

[features]
default = [
    "path_utils_feature",
    "logger_utils_feature",
    "config_toml",
    "agent_task_definitions_serde",
    "uuid_feature",
    "tokio_sender_feature",
    "serde_support",
]

serde_support = ["dep:serde"]
path_utils_feature = ["dep:path-absolutize", "dirs_next_feature"] 
logger_utils_feature = ["dep:tracing-appender", "dep:tracing-subscriber"] 
config_toml = ["serde_support", "dep:toml_edit", "dep:config", "dep:toml", "dep:num_cpus"] 
agent_task_definitions_serde = [
    "serde_support",
    "dep:serde_json",
    "dep:either",
    "dep:indexmap",
    "uuid_feature",
]

uuid_feature = ["dep:uuid"]
tokio_sender_feature = ["dep:tokio"]
llguidance_support = ["dep:llguidance", "agent_task_definitions_serde"]
dirs_next_feature = ["dep:dirs-next"]
```
